@@ -128,7 +128,10 @@ void T_VerticalDoor (vldoor_t* door)
             );
 
       /* killough 10/98: implement gradual lighting effects */
-      if (door->lighttag && door->topheight - door->sector->floorheight && compatibility_level >= mbf_compatibility)//e6y
+      // e6y: "Tagged doors don't trigger special lighting" handled wrong
+      // http://sourceforge.net/tracker/index.php?func=detail&aid=1411400&group_id=148658&atid=772943
+      // Old code: if (door->lighttag && door->topheight - door->sector->floorheight)
+      if (door->lighttag && door->topheight - door->sector->floorheight && compatibility_level >= mbf_compatibility)
         EV_LightTurnOnPartway(door->line,
                               FixedDiv(door->sector->ceilingheight -
                                        door->sector->floorheight,
@@ -175,10 +178,10 @@ void T_VerticalDoor (vldoor_t* door)
           default:
             break;
         }
-        //e6y
+        // e6y: "Tagged doors don't trigger special lighting" handled wrong
+        // http://sourceforge.net/tracker/index.php?func=detail&aid=1411400&group_id=148658&atid=772943
         if (door->lighttag && door->topheight - door->sector->floorheight && compatibility_level < mbf_compatibility)
           EV_LightTurnOnPartway(door->line,0);
-
       }
       /* jff 1/31/98 turn lighting off in tagged sectors of manual doors
        * killough 10/98: replaced with gradual lighting code
@@ -222,7 +225,10 @@ void T_VerticalDoor (vldoor_t* door)
             );
 
       /* killough 10/98: implement gradual lighting effects */
-      if (door->lighttag && door->topheight - door->sector->floorheight && compatibility_level >= mbf_compatibility)//e6y
+      // e6y: "Tagged doors don't trigger special lighting" handled wrong
+      // http://sourceforge.net/tracker/index.php?func=detail&aid=1411400&group_id=148658&atid=772943
+      // Old code: if (door->lighttag && door->topheight - door->sector->floorheight)
+      if (door->lighttag && door->topheight - door->sector->floorheight && compatibility_level >= mbf_compatibility)
         EV_LightTurnOnPartway(door->line,
                               FixedDiv(door->sector->ceilingheight -
                                        door->sector->floorheight,
@@ -258,8 +264,9 @@ void T_VerticalDoor (vldoor_t* door)
         }
 
         /* jff 1/31/98 turn lighting on in tagged sectors of manual doors
-   * killough 10/98: replaced with gradual lighting code */
-        //e6y
+         * killough 10/98: replaced with gradual lighting code */
+        // e6y: "Tagged doors don't trigger special lighting" handled wrong
+        // http://sourceforge.net/tracker/index.php?func=detail&aid=1411400&group_id=148658&atid=772943
         if (door->lighttag && door->topheight - door->sector->floorheight && compatibility_level < mbf_compatibility)
           EV_LightTurnOnPartway(door->line,FRACUNIT);
       }
